# MegaAwesome

./: .coveragerc  .testr.conf  README.md  Vagrantfile  megaawesome_provision.yml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
megaawesome/: core.py
megaawesome/tests/unit/: test_core.py
tools/: coding-checks.sh  misc-sanity-checks.sh
