[metadata]
name = megaawesome
version = 1.0.0
summary = MegaAwesome
description-file =
    README.md
author = MegaAwesome
author-email = megaawesome@lists.megaawesome.org
home-page = http://www.megaawesome.org/
classifier =
    Environment :: MegaAwesome
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[entry_points]
console_scripts =
    mega-awesome = megaawesome.core:main